@@ -1,6 +1,7 @@
 Revision history for Thread-SigMask
 
 {{$NEXT}}
+          Switched back to Exporter
 
 0.003     2011-09-15 01:24:38 Europe/Amsterdam
           Converted to Dist::Zilla
